duck/test/fail/duplicate_pattern.duck
main = testAll

_ = case 1,2 of x,x -> 0
